# amr-gnn

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  reproduce_issue.py
conf/: config.yaml  explain.yaml
envs/: amr_gnn.yml
preprocess/: Snakefile  amrgnn.yaml  compute_fcgr_distance_matrix.py  compute_snp_distance_matrix.py  config.yaml  convert_unitig_to_node_features.py  precompute_adjacency_matrix.py  utils.py
src/: amr_gnn.py  explain.py  models.py  predict.py  train.py  utils.py
utils/: precompute_adjacency_matrix.py
